--- a/basicIOTransferDemo/pom.xml
+++ b/basicIOTransferDemo/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>micrometer-core</artifactId>
             <version>1.13.3</version>
         </dependency>
+<!-- play for apache mina -->
+        <dependency>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
+            <version>2.1.5</version> <!-- Use the latest version -->
+        </dependency>
     </dependencies>
 
 </project>
