--- a/basicIOTransferDemo/pom.xml
+++ b/basicIOTransferDemo/pom.xml
@@ -69,7 +69,25 @@
         <dependency>
             <groupId>org.apache.mina</groupId>
             <artifactId>mina-core</artifactId>
-            <version>2.1.5</version> <!-- Use the latest version -->
+            <version>2.1.5</version>
+        </dependency>
+ <!-- play for netty -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.113.Final</version>
+        </dependency>
+<!-- play for akka -->
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.13</artifactId>
+            <version>2.6.19</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor-testkit-typed_2.13</artifactId>
+            <version>2.6.19</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
