--- a/basicDataStructureDemo/pom.xml
+++ b/basicDataStructureDemo/pom.xml
@@ -125,5 +125,16 @@
       <artifactId>json-path</artifactId>
       <version>2.4.0</version>
     </dependency>
+
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>5.3.23</version> <!-- Use the latest stable version -->
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>5.3.23</version> <!-- Use the latest stable version -->
+    </dependency>
   </dependencies>
 </project>
