--- a/basicJdbcDemo/basicDBDemo/pom.xml
+++ b/basicJdbcDemo/basicDBDemo/pom.xml
@@ -16,10 +16,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.20</version>
     </dependency>
   </dependencies>
 </project>
