--- a/basicCollectionDemo/pom.xml
+++ b/basicCollectionDemo/pom.xml
@@ -13,6 +13,12 @@
         <artifactId>guava</artifactId>
         <version>33.0.0-jre</version>
     </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
