--- a/basicThreadDemo/pom.xml
+++ b/basicThreadDemo/pom.xml
@@ -13,5 +13,12 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+<dependencies>
 
+    <dependency>
+        <groupId>org.openjdk.jol</groupId>
+        <artifactId>jol-core</artifactId>
+        <version>0.17</version>
+    </dependency>
+</dependencies>
 </project>
